# proto-test

./: README.md  docker-compose.yml
proto-go/: README.md  go.mod
proto-rs/: Cargo.toml  README.md  build.rs
proto-rs/proto/: calculator.proto
proto-rs/src/: client.rs  main.rs  otel.rs
