[package]
name = "proto-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
tonic-reflection = "0.12.3"

prost = "0.13.3"

tokio = { version = "1.40.0", features = ["full"] }

tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
tracing-opentelemetry = "0.27.0"

opentelemetry = { version = "0.26.0", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.26.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.26.0", features = ["metrics"] }
opentelemetry-stdout = { version = "0.26.0", features = ["trace", "metrics"] }
opentelemetry-semantic-conventions = { version = "0.26.0", features = ["semconv_experimental"] }

[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/main.rs"
